cmake_minimum_required(VERSION 3.6)
project(samples)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        ch01/01_adtBag/BagInterface.h
        ch01/01_adtBag/main.cpp
        ch02/01_simpleFactorialRecursion/main.cpp
        ch02/02_writeBackwardsRecursion/main.cpp
        ch03/01_arrayBag/arrayBag.h
        ch03/01_arrayBag/BagInterface.h
        ch03/01_arrayBag/main.cpp
        ch04/01_linkedListClass/ArrayBag.h
        ch04/01_linkedListClass/BagInterface.h
        ch04/01_linkedListClass/LinkedBag.h
        ch04/01_linkedListClass/main.cpp
        ch04/01_linkedListClass/node.h
        ch06/01_stackADTInterface/stackInterface.h
        ch06/02_balancedBraces/main.cpp
        ch06/03_infixToPostfix/infixToPostfix.cpp
        ch06/03_infixToPostfix/infixToPostfix.h
        ch06/03_infixToPostfix/main.cpp
        ci01/01_simplePlainBox/main.cpp
        ci01/01_simplePlainBox/PlainBox.cpp
        ci01/01_simplePlainBox/PlainBox.h
        ci01/02_templatePlainBox/main.cpp
        ci01/02_templatePlainBox/PlainBox.h
        ci01/03_inheritanceToyBox/main.cpp
        ci01/03_inheritanceToyBox/PlainBox.h
        ci01/03_inheritanceToyBox/ToyBox.h
        ci01/04_magicBox/MagicBox.h
        ci01/04_magicBox/main.cpp
        ci01/04_magicBox/PlainBox.h
        ci01/04_magicBox/ToyBox.h
        ci01/05_adtBox/BoxInterface.h
        ci01/05_adtBox/MagicBox.h
        ci01/05_adtBox/main.cpp
        ci01/05_adtBox/PlainBox.h
        ci01/05_adtBox/ToyBox.h
        ci02/01_pointers/main.cpp
        ci02/02_pointers_sol/main.cpp
        ci02/ci02fromTheBook/SectionC2_2/MagicBox.cpp
        ci02/ci02fromTheBook/SectionC2_2/MagicBox.h
        ci02/ci02fromTheBook/SectionC2_2/main.cpp
        ci02/ci02fromTheBook/SectionC2_2/PlainBox.cpp
        ci02/ci02fromTheBook/SectionC2_2/PlainBox.h
        ci02/ci02fromTheBook/SectionC2_4_VirtualMethods/MagicBox.cpp
        ci02/ci02fromTheBook/SectionC2_4_VirtualMethods/MagicBox.h
        ci02/ci02fromTheBook/SectionC2_4_VirtualMethods/main.cpp
        ci02/ci02fromTheBook/SectionC2_4_VirtualMethods/PlainBox.cpp
        ci02/ci02fromTheBook/SectionC2_4_VirtualMethods/PlainBox.h
        ci02/ci02fromTheBook/SectionC2_5_1_Resizable/ArrayBag.cpp
        ci02/ci02fromTheBook/SectionC2_5_1_Resizable/ArrayBag.h
        ci02/ci02fromTheBook/SectionC2_5_1_Resizable/BagInterface.h
        ci02/ci02fromTheBook/SectionC2_5_1_Resizable/main.cpp
        ci02/ci02fromTheBook/addResizableAdd.cpp
        ci02/ci02fromTheBook/GoodMemory.cpp
        ci02/ci02fromTheBook/GoodMemory.h
        ci02/ci02fromTheBook/myLeakyFunction.cpp
        ci02/ci02fromTheBook/pluggedLeakyFunction.cpp
        ci03/01_basicException/main.cpp
        ci03/02_ExcptionClass/main.cpp
        other/01_factorialInCpp/factorialInCLion/factorial.cpp
        other/01_factorialInCpp/factorialInCLion/factorial.h
        other/01_factorialInCpp/factorialInCLion/main.cpp
        other/01_factorialInCpp/factorialInCppGpp/factorial.cpp
        other/01_factorialInCpp/factorialInCppGpp/factorial.h
        other/01_factorialInCpp/factorialInCppGpp/factorialInCppGppMain.cpp
        other/02_sizeOfCpp/main.cpp
        other/03_vectorInCpp/main.cpp)

add_executable(samples ${SOURCE_FILES})